@@ -120,7 +120,7 @@ ACE_OS::thr_equal (ACE_thread_t t1, ACE_thread_t t2)
 ACE_INLINE int
 ACE_OS::condattr_destroy (ACE_condattr_t &attributes)
 {
-#if defined (ACE_HAS_THREADS)
+#if defined (ACE_HAS_THREADS) && !defined (ACE_LACKS_CONDATTR)
 #   if defined (ACE_HAS_PTHREADS)
   pthread_condattr_destroy (&attributes);
 #   else
@@ -141,23 +141,30 @@ ACE_OS::condattr_init (ACE_condattr_t &attributes, int type)
 #   if defined (ACE_HAS_PTHREADS)
   int result = -1;
 
-#   if defined (ACE_PTHREAD_CONDATTR_T_INITIALIZE)
-      /* Tests show that VxWorks 6.x pthread lib does not only
-       * require zeroing of mutex/condition objects to function correctly
-       * but also of the attribute objects.
-       */
-      ACE_OS::memset (&attributes, 0, sizeof (attributes));
-#   endif
+#   if !defined (ACE_LACKS_CONDATTR)
+#     if defined (ACE_PTHREAD_CONDATTR_T_INITIALIZE)
+  /* Tests show that VxWorks 6.x pthread lib does not only
+    * require zeroing of mutex/condition objects to function correctly
+    * but also of the attribute objects.
+    */
+  ACE_OS::memset (&attributes, 0, sizeof (attributes));
+#     endif
   if (
       ACE_ADAPT_RETVAL (pthread_condattr_init (&attributes), result) == 0
-#       if defined (_POSIX_THREAD_PROCESS_SHARED) && !defined (ACE_LACKS_CONDATTR_PSHARED)
+#     if defined (_POSIX_THREAD_PROCESS_SHARED) && !defined (ACE_LACKS_CONDATTR_PSHARED)
       && ACE_ADAPT_RETVAL (pthread_condattr_setpshared (&attributes, type),
                            result) == 0
-#       endif /* _POSIX_THREAD_PROCESS_SHARED && ! ACE_LACKS_CONDATTR_PSHARED */
+#     endif /* _POSIX_THREAD_PROCESS_SHARED && ! ACE_LACKS_CONDATTR_PSHARED */
       )
+#   else
+  if (type == USYNC_THREAD)
+#   endif /* !ACE_LACKS_CONDATTR */
      result = 0;
   else
-     result = -1;       // ACE_ADAPT_RETVAL used it for intermediate status
+    {
+      ACE_UNUSED_ARG (attributes);
+      result = -1;       // ACE_ADAPT_RETVAL used it for intermediate status
+    }
 
   return result;
 #   else
